examples/type_system/failing/14_unhandled_effect.flx
// Runtime error: no handler for Console
perform Console.print("hello")
